[tool.poetry]
name = "repl_python3_Qui-0710-JOGO"
version = "0.1.0"
description = ""
authors = ["Lucas Lima"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
